Resolved accesibility issue with color contrasts on panel headers

--- a/skins/vector/main-ltr.css
+++ b/skins/vector/main-ltr.css
@@ -229,7 +229,7 @@ div#panel {
 	}
 	div#panel div.portal h5 {
 		font-weight: normal;
-		color: #666666;
+		color: #444444;
 		padding: 0.5em;
 		padding-top: 0;
 		padding-left: 1.25em;
