--- a/skins/vector/main-rtl.css
+++ b/skins/vector/main-rtl.css
@@ -243,7 +243,7 @@ div#panel {
 	}
 	div#panel div.portal h5 {
 		font-weight: normal;
-		color: #666666;
+		color: #444444;
 		padding: 0.5em;
 		padding-top: 0;
 		padding-right: 1.25em;
